# howl

./: .env.example  .env.production  .gitignore  Procfile  README.md  docker-compose.yml  pyproject.toml  railpack.json  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 246bc2dd05a6_add_user_model.py  a1b2c3d4e5f6_add_personality_traits_and_avatar_description.py  a2b3c4d5e6f7_add_age_to_users.py  b2c3d4e5f6a1_add_avatar_status_updated_at.py  b3c4d5e6f7a8_add_refresh_tokens.py  c3d4e5f6a1b2_add_name_and_location.py  c4d5e6f7a8b9_add_blocks.py  d4e5f6a1b2c3_add_swipes_and_matches.py  d5e6f7a8b9c0_add_email_notifications.py  e5f6a1b2c3d4_add_messages.py  e6f7a8b9c0d1_add_reports.py  f6a1b2c3d4e5_add_password_reset_tokens.py  f7a8b9c0d1e2_add_preference_fields.py  g8a9b0c1d2e3_add_message_soft_delete.py
app/: celery_app.py  config.py  db.py  dependencies.py  main.py  security.py
app/api/: auth.py  avatar.py  blocks.py  chat.py  profile.py  reports.py  swipes.py  users.py
app/models/: __init__.py  block.py  match.py  message.py  password_reset_token.py  refresh_token.py  report.py  swipe.py  user.py
app/schemas/: avatar.py  block.py  browse.py  chat.py  swipe.py  user.py
app/services/: email.py  image_generation.py
app/tasks/: auto_match.py  avatar.py  notify.py
docs/decisions/: ADR.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  utils.js
frontend/src/components/: ChatView.jsx  DiscoverView.jsx  LegalPage.jsx  LoginView.jsx  MatchesView.jsx  Nav.jsx  PasswordReset.jsx  ProfileView.jsx  RegisterView.jsx  ReportModal.jsx
scripts/: backfill_demo_matches.py  seed_demo_users.py  startup.sh
tests/: conftest.py  test_account_deletion.py  test_auth.py  test_auto_match.py  test_avatar.py  test_backfill.py  test_blocks.py  test_chat.py  test_image_generation.py  test_notify.py  test_password_reset.py  test_preferences.py  test_profile.py  test_reports.py  test_swipes.py  test_task.py  test_users.py
